@@ -23,63 +23,38 @@ this program; if not, write to the Free Software Foundation, Inc.,
 '''
 
 import phoupl
+import phoupl.ilikephoto
 import pycurl
 
-class DroxiService(phoupl.core.PhotoUploader):
+class DroxiService(phoupl.core.PhotoUploader, phoupl.ilikephoto.ILikePhoto):
     def _connect(self):
+        phoupl.ilikephoto.ILikePhoto.__init__(self, 'http://foto.droxi.cz', 'droxi')
         # Use preseeded session
         if self._session is not None:
             self.msg('Reusing session %s' % self._session)
             return
 
         # Init session...
-        self.msg('Initialising session...')
-        self.get('http://foto.droxi.cz/')
-        self.cookies = self._curl.getinfo(pycurl.INFO_COOKIELIST)
-        self._session = self.cookies[0].split('\t')[6]
-        self.msg('Created session %s' % self._session)
-
-        # Select photo and not photoalbum...
-        self.msg('Selecting photo order...')
-        self.post('http://foto.droxi.cz/index.php',
-                [
-                    ('scripttest', '0'), 
-                    ('vyber', 'fotka')
-                ])
+        self.ipl_init_session()
 
         # Select fast/cheaper/simple order...
-        self.msg('Selecting fast/cheaper/simple order...')
-        self.post('http://foto.droxi.cz/typ-zakazky/index.php',
-                [
-                    ('krok_zpet', '4'), 
-                    ('set_ordertype', 'disc'), 
-                    ('pokracovat', 'some text')
-                ])
+        self.ipl_select_simple()
 
     def _upload(self, image):
-        self.post(
-                'http://foto.droxi.cz/vlozit-fotografie/upload.php?ilikephoto=%s&verze=droxi' % self._session,
-                [
-                    ('sessionid',  self._session), 
-                    ('f1', (pycurl.FORM_FILE, image)), 
-                    ('nf1', ''),
-                    ('pokracovat', 'some text')
-                ])
+        self.ipl_upload(image)
 
     def _post_upload(self):
-        self.msg('''
-You can review them here:
-http://foto.droxi.cz/prehled-vlozenych-fotografii/?ilikephoto=%s
-You can finish order here:
-http://foto.droxi.cz/format-fotografii/?ilikephoto=%s
-''' %(self._session, self._session))
+        self.ipl_post_upload()
 
     def get_review_url(self):
-        return 'http://foto.droxi.cz/prehled-vlozenych-fotografii/?ilikephoto=%s' % self._session
+        return self.ipl_get_review_url()
+
+    def ipl_get_simple_url(self):
+        return '%s/typ-zakazky/index.php' % self._baseurl
 
 # Register service
 phoupl.register_service(
-        'droxi.cz', 
+        'droxi.cz',
         DroxiService,
         'http://foto.droxi.cz/',
         ['new', 'reuse'],
