@@ -23,19 +23,19 @@ this program; if not, write to the Free Software Foundation, Inc.,
 '''
 
 import phoupl
+import phoupl.ilikephoto
 import pycurl
 
-class ILikePhotoService(phoupl.core.PhotoUploader):
+class ILikePhotoService(phoupl.core.PhotoUploader, phoupl.ilikephoto.ILikePhoto):
     def _connect(self):
+        phoupl.ilikephoto.ILikePhoto.__init__(self, 'http://sberna.ilikephoto.cz', 'sberna')
+        # Use preseeded session
         if self._session is not None:
             self.msg('Reusing session %s' % self._session)
+            return
 
         # Init session...
-        self.msg('Initialising session...')
-        self.get('http://sberna.ilikephoto.cz/')
-        self.cookies = self._curl.getinfo(pycurl.INFO_COOKIELIST)
-        self._session = self.cookies[0].split('\t')[6]
-        self.msg('Created session %s' % self._session)
+        self.ipl_init_session()
 
         self.msg('Entering service...')
         self.post('http://sberna.ilikephoto.cz/',
@@ -46,38 +46,23 @@ class ILikePhotoService(phoupl.core.PhotoUploader):
         self.msg('Confirming conditions...')
         self.post('http://sberna.ilikephoto.cz/vstup-do-fotosberny/index.php',
                 [
-                    ('souhlasim', 'ano'), 
+                    ('souhlasim', 'ano'),
                 ])
 
     def _upload(self, image):
-        self.post(
-                'http://sberna.ilikephoto.cz/vlozit-fotografie/upload.php?ilikephoto=%s&verze=sberna' % self._session,
-                [
-                    ('sessionid',  self._session), 
-                    ('f1', (pycurl.FORM_FILE, image)), 
-                    ('nf1', ''),
-                    ('pokracovat', 'some text')
-                ])
+        self.ipl_upload(image)
 
     def _post_upload(self):
-        self.msg('''
-You can review them here:
-http://sberna.ilikephoto.cz/prehled-vlozenych-fotografii/?ilikephoto=%s
-You can finish order here:
-http://sberna.ilikephoto.cz/termin-zpracovani/?ilikephoto=%s
-
-If you started new session, you need to inject cookie ilikephoto with value 
-%s to your browser for sberna.ilikephoto.cz domain.
-''' %(self._session, self._session, self._session))
+        self.ipl_post_upload()
 
     def get_review_url(self):
-        return 'http://sberna.ilikephoto.cz/prehled-vlozenych-fotografii/?ilikephoto=%s' % self._session
+        return self.ipl_get_review_url()
 
 # Register service
 phoupl.register_service(
-        'ilikephoto.cz', 
-        ILikePhotoService, 
-        'http://sberna.ilikephoto.cz/', 
+        'ilikephoto.cz',
+        ILikePhotoService,
+        'http://sberna.ilikephoto.cz/',
         ['new', 'reuse', 'cookie'],
         'ilikePHOTO',
         ['cz'],
